# mcp-home-assistant-extended

./: .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  SUMMARY.md  build.sh  build.yaml  config.yaml  config_example.json  pyproject.toml  requirements.txt  server.py  test_api.py
.docs/: ADDON_BUILD.md  ADDON_INSTALLATION.md  ADDON_SETUP_SUMMARY.md  ADDON_STRUCTURE.md  IMPLEMENTATION_GUIDE.md  PDM_SETUP.md  QUICK_START.md  SETUP.md  SUMMARY.md  USAGE_EXAMPLES.md
.github/: copilot-instructions.md
.github/workflows/: build.yaml
rootfs/etc/services.d/mcp-ha-extended/: finish  run
src/mcp_ha_extended/: __init__.py  server.py
tests/: __init__.py  manual_test_api.py  test_api.py  test_server.py
